# cifix-prototype

./: README.md  pyproject.toml
src/cifix/: classifier.py  formatter.py  github.py  llm_advisor.py  llm_provider.py  patterns.py
src/cifix/cli/: __init__.py  diagnose_cmd.py  fix_cmd.py
src/cifix/fixer/: dep_fixer.py
tests/: test_dep_fixer.py  test_diagnose_cmd.py  test_llm_advisor.py  test_llm_provider.py
