
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cifix"
version = "0.5.0"
description = "CLI tool for analyzing and auto-fixing CI/CD failures"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
anthropic = [
    "anthropic>=0.39.0",
]
openai = [
    "openai>=1.0",
]
gemini = [
    "google-generativeai>=0.8.0",
]
llm = [
    "anthropic>=0.39.0",
    "openai>=1.0",
    "google-generativeai>=0.8.0",
]

[project.scripts]
cifix = "cifix.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
